# broker-backend

./: .env.example  .gitignore  README.md  folderstr.md  pyproject.toml
app/: main.py
app/api/: __init__.py  routes.py
app/api/public/: __init__.py  auth.py  favorites.py  properties.py
app/core/: config.py  database.py  security.py  startup.py
app/domains/auth/: model.py  schema.py  service.py
app/domains/favorites/: model.py  schema.py  service.py
app/domains/properties/: images.py  model.py  schema.py  seed.py  service.py
app/domains/users/: model.py  schema.py  service.py
app/utils/: deps.py
scripts/: generate_property_thumbnails.py  seed_properties.py
tests/: test_auth_flow.py  test_auth_service.py  test_config.py  test_property_images.py  test_property_seed.py  test_user_validation.py
